--- a/springtest-eureka-server/src/main/resources/bootstrap.yml
+++ b/springtest-eureka-server/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: springtest-service
+    name: eureka-server
   cloud:
     config:
       uri: http://localhost:8888
