--- a/springtest_second/src/main/resources/bootstrap.yml
+++ b/springtest_second/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: springtest-service
+    name: springtest2-service
   cloud:
     config:
       uri: http://localhost:8888
